# WhiskerRAG

./: .dockerignore  .gitignore  .pre-commit-config.yaml  README.en-US.md  README.md  docker-compose.yml  generate-client.sh  init.sql  local-docker-compose.yml  pyproject.toml  run_server.sh  template.yml  template_server.yml  template_task.yml
.aws/: amsconfig.toml  samconfig.toml  server_samconfig.toml  task_samconfig.toml
WhiskerRAGUtil/: .gitignore  pyproject.toml
docker/: Dockerfile.aws.server  Dockerfile.aws.task  Dockerfile.local  lambda-rag.Dockerfile
docs/: AWS_LAMBDA_GIT_INTEGRATION.md  BRANCH_STRATEGY.md
lambda/: README.md
lambda_task_subscriber/: .env.example  git_config.py  handler.py  (+1 more)
server/: .env.example  Makefile  bootstrap.sh  conftest.py  full_format.py  init.py  install.sh  main.py  mypy.ini  pyproject.toml  pytest.ini  readme.md  requirements-dev.txt  requirements.txt
server/api/agent/: router.py
server/api/api_key/: router.py
server/api/artifact_index/: router.py
server/api/chunk/: router.py
server/api/dashboard/: router.py
server/api/knowledge/: router.py  utils.py
server/api/retrieval/: router.py
server/api/rule/: router.py
server/api/space/: router.py
server/api/tag/: router.py
server/api/tagging/: router.py
server/api/task/: router.py
server/api/tenant/: router.py
server/api/webhook/: router.py
server/core/: auth.py  cache.py  config.py  global_vars.py  log.py  plugin_manager.py  response.py  retrieval_counter.py  settings.py
server/local_plugin/: .env.example  requirements.txt
server/local_plugin/db_engine/: client.py
server/local_plugin/db_engine/postgresql/: client.py
server/local_plugin/task_engine/: __init__.py  client.py
server/local_plugin/task_engine/aws/: README.md
server/local_plugin/task_engine/local/: client.py
server/local_plugin/task_engine/local/registry/: huggingface.py  model_manager.py
server/local_plugin/task_engine/registry/: ALL_MINILM_L6_V2.py  ALL_MPNET_BASE_V2.py  huggingface.py  model_manager.py  multilingual-MiniLM-L12-v2.py  text2vec-base-chinese.py
server/model/: resource.py  response.py
server/plugin_types/interface/: db_engine_plugin_interface.py
server/plugin_types/model/: knowledge.py
server/plugins/: .env.example  __init__.py  fastapi_plugin.py
server/plugins/db_engine/: supabase_client.py
server/plugins/db_engine/supabase/: client.py  util.py
server/plugins/task_engine/: __init__.py  aws_client.py
server/plugins/task_engine/aws/: client.py  requirements.txt  sqs_message_processor.py  utils.py
server/plugins/task_engine/lambda/: client.py
server/scripts/: dev.py  package.sh  setup_dev.sh
server/supabase_aws_plugin/: __init__.py  fastapi_plugin.py  requirements.txt
server/supabase_aws_plugin/db_engine/: __init__.py  supabase_client.py
server/supabase_aws_plugin/task_engine/: aws_client.py
server/tests/agent/: test_agent.py
server/tests/knowledge/: test_utils.py
server/tests/plugins/: mock_db_plugin.py
server/tests/retrieval/: test_retrieval_counter.py
(+27 files in other folders)
