[project]
name = "whisker-rag-server"
version = "0.1.0"
description = "rag server"
authors = [{ name = "Your Name", email = "you@example.com" }]
readme = "README.md"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"
fastapi = "^0.100.0"
uvicorn = "^0.23.2"
pydantic = "^2.0.0,<3.0.0"
python-dotenv = ">=1.0.0,<2.0.0"
pydantic-settings = ">=2.0.0,<3.0.0"
PyGithub = "2.3.0"
whisker-rag-util = { path = "../py_package" }

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
httpx = "^0.24.0"
black = "^23.3.0"
isort = "^5.13.0"
mypy = "^1.14.0"

[tool.poetry.scripts]
start = "uvicorn app.main:app --reload"
test = "pytest tests/"
migrate = "alembic upgrade head"
