[project]
name = "server"
version = "0.1.1"
description = "rag server"
authors = [{ name = "petercat.ai", email = "antd.antgroup@gmail.com" }]
readme = "README.md"

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"
fastapi = "^0.100.0"
uvicorn = "^0.23.2"
pydantic = "^2.0.0,<3.0.0"
python-dotenv = ">=1.0.0,<2.0.0"
pydantic-settings = ">=2.0.0,<3.0.0"
PyGithub = "2.3.0"
httpx = "^0.27.2"
# whiskerRAG = { path = "/Users/xxx/Projects/WhiskerRAG-toolkit", develop = true }
whiskerrag = "^0.0.1a8"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
black = "^23.3.0"
isort = "^5.13.0"
mypy = "^1.14.0"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]

[tool.poetry.scripts]
start = "python -m uvicorn main:app --reload"
test2 = "pytest tests"
