[project]
name = "server"
version = "0.1.0"
description = ""
authors = [
    {name = "liuzhide",email = "2265335198@qq.com"}
]
readme = "./README.md"
requires-python = ">=3.11,<4.0"

[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["liuzhide <2265335198@qq.com>"]
packages = [
    { include = "api" },
    { include = "core" },
    { include = "local_plugin" },
    { include = "supabase_aws_plugin" },
    { include = "scripts" }
]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
fastapi = ">=0.115.0"
uvicorn = "==0.23.2"
pydantic = ">=2.0.0,<3.0.0"
python-dotenv = ">=1.0.0,<2.0.0"
pydantic-settings = ">=2.0.0,<3.0.0"
PyGithub = "==2.3.0"
httpx = ">=0.27.2"
starlette = ">=0.40.0"
whiskerrag = ">=0.2.3"
iso8601 = "==2.1.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.4.0"
pytest-asyncio = ">=0.21.0"
pytest-cov = ">=4.0.0"
black = ">=23.3.0"
isort = ">=5.13.0"
mypy = ">=1.14.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
dev = "scripts.dev:run"
format = "scripts.full_format:run"